--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -7,12 +7,11 @@ helios: {
     pattern: '^\d+\.\d+\.\d+$'
   },
   exhibitor: {
-    version:   latest, # 1.5.2 or latest
-    clone_url: 'https://github.com/Netflix/exhibitor.git',
+    version: latest, # 1.5.2 or latest
+    gradle_provider: 'https://github.com/evgeny-goldin/gradle-provider.git',
     latest: {
-      command: "curl -s 'https://github.com/Netflix/exhibitor/releases' | grep 'tag-name' | sed -r 's/<[^>]+>//g' | head -1 | awk '{print $1}'",
+      command: "curl -s 'http://jcenter.bintray.com/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
       pattern: '^\d+\.\d+\.\d+$'
-    },
-  },
-
+    }
+  }
 }
