--- a/playbooks/roles/helios/tasks/exhibitor.yml
+++ b/playbooks/roles/helios/tasks/exhibitor.yml
@@ -6,7 +6,7 @@
 
 - name: Writing Exhibitor build file
   template:
-    src:  build.gradle
+    src:  exhibitor-build.gradle
     dest: "{{ exhibitor_home }}/build.gradle"
 
 - name: Building Exhibitor standalone
