--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -1,7 +1,8 @@
 ---
 helios: {
-  version:      latest, # 0.8.130 or latest
-  download_url: 'https://github.com/spotify/helios/releases/download',
+  version:         latest, # 0.8.130 or latest
+  download_url:    'https://github.com/spotify/helios/releases/download',
+  helios_packages: /opt/helios,
   latest: {
     command: "curl -s 'https://github.com/spotify/helios/releases' | grep '/spotify/helios/releases/tag/' | sed -r 's/<[^>]+>//g' | sed -r 's/:.+//' | sed '/^\\s*$/d' | head -1 | awk '{print $1}'",
     pattern: '^\d+\.\d+\.\d+$'
