--- a/playbooks/roles/helios/tasks/helios-master/exhibitor.yml
+++ b/playbooks/roles/helios/tasks/helios-master/exhibitor.yml
@@ -1,4 +1,11 @@
 ---
+- name: Setting up Exhibitor variables
+  set_fact:
+    exhibitor_version: "{{ helios.exhibitor.version | calculate( helios.exhibitor.latest ) }}"
+    exhibitor_home:    /opt/exhibitor
+- set_fact:
+    exhibitor_jar:     "{{ exhibitor_home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
+
 - name: Cloning Gradle provider
   git:
     repo: "{{ helios.exhibitor.gradle_provider }}"
@@ -15,7 +22,7 @@
     chdir: "{{ exhibitor_home }}"
 
 - name:     Running Exhibitor standalone help
-  command:  java -jar '{{ exhibitor_home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar' --help
+  command:  java -jar '{{ exhibitor_jar }}' --help
   register: exhibitor_help_out
 
 - name:  Verifying Exhibitor standalone help
