--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -2,7 +2,7 @@
 - name: Copying Helios agent config
   copy:
     src:  helios-agent
-    dest: /etc/default/helios-agent
+    dest: "{{ helios.agent.config }}"
 
 - name: Installing Helios agent
   apt:  deb="{{ helios.helios_packages }}/helios-agent_{{ helios_version }}_all.deb"
