Helios agent - ZK client installed, Vagrant - private network set up

--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -3,6 +3,9 @@
   template:
     src:  helios-agent
     dest: "{{ helios.agent.config }}"
+    
+- name: Installing ZooKeeper client
+  pip: name=zk-shell
 
 - name: Downloading Helios SkyDNS plugin
   get_url:
