--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -1,6 +1,6 @@
 ---
-- debug: var={{ zk_host }}
-- debug: var={{ zk_port }}
+- debug: var=zk_host
+- debug: var=zk_port
 
 - name: Copying Helios agent config
   template:
@@ -16,7 +16,7 @@
 - name:     Running ZooKeeper client
   command:  "{{ zk_shell_command }}"
   register: zk_shell_out
-- debug:    msg="{{ zk_shell_command }} => [{{ zk_shell_out.stdout }}]"
+- debug:    msg="{{ zk_shell_command }} => '{{ zk_shell_out.stdout }}'"
   
 - name:  Verifying ZooKeeper client was able to connect
   assert:
@@ -24,7 +24,7 @@
       - not ( 'failed'        in zk_shell_out.stdout.lower())
       - not ( 'time-out'      in zk_shell_out.stdout.lower())
       - not ( 'not connected' in zk_shell_out.stdout.lower())
-      - zk_host in zk_shell_out.stdout
+      - "'{{ zk_host | bare }}' in zk_shell_out.stdout"
 
 - name: Downloading Helios SkyDNS plugin
   get_url:
