--- a/playbooks/roles/helios/tasks/master/zookeeper.yml
+++ b/playbooks/roles/helios/tasks/master/zookeeper.yml
@@ -1,6 +1,15 @@
 ---
+- debug: var=zookeeper_port
+
 - name: Installing ZooKeeper service
   apt: name=zookeeperd
 
+- name: Setting up ZooKeeper port
+  # http://zookeeper.apache.org/doc/r3.4.6/zookeeperAdmin.html#sc_zkMulitServerSetup
+  lineinfile: 
+    dest:   "{{ helios.master.zookeeper.config }}"
+    line:   "clientPort={{ zookeeper_port }}"
+    regexp: '^clientPort=\d+$'
+        
 - name: Starting ZooKeeper service
-  service: name=zookeeper state=started enabled=yes
+  service: name=zookeeper state=restarted enabled=yes
