--- a/playbooks/roles/helios/tasks/master/exhibitor.yml
+++ b/playbooks/roles/helios/tasks/master/exhibitor.yml
@@ -2,24 +2,28 @@
 - name: Setting up Exhibitor variables
   set_fact:
     exhibitor_version: "{{ helios.master.exhibitor.version | calculate( helios.master.exhibitor.latest ) }}"
-    exhibitor_home:    /opt/exhibitor
 - set_fact:
-    exhibitor_jar:     "{{ exhibitor_home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
+    exhibitor_jar:     "{{ helios.master.exhibitor.home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
+- stat: path={{ exhibitor_jar }}
+  register: exhibitor_jar_stat
 
 - name: Cloning Gradle provider
   git:
     repo: "{{ helios.master.exhibitor.gradle_provider }}"
-    dest: "{{ exhibitor_home }}"
+    dest: "{{ helios.master.exhibitor.home }}"
+  when: ( not exhibitor_jar_stat.stat.exists | bool )
 
 - name: Writing Exhibitor build file
   template:
     src:  exhibitor-build.gradle
-    dest: "{{ exhibitor_home }}/build.gradle"
+    dest: "{{ helios.master.exhibitor.home }}/build.gradle"
+  when: ( not exhibitor_jar_stat.stat.exists | bool )
 
 - name: Building Exhibitor standalone
   command: ./gradlew clean jar
   args:
-    chdir: "{{ exhibitor_home }}"
+    chdir: "{{ helios.master.exhibitor.home }}"
+  when: ( not exhibitor_jar_stat.stat.exists | bool )
 
 - name:     Running Exhibitor standalone help
   command:  java -jar '{{ exhibitor_jar }}' --help
