--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -12,6 +12,7 @@ helios: {
       exhibitor: {
         version: latest, # 1.5.2 or latest
         gradle_provider: 'https://github.com/evgeny-goldin/gradle-provider.git',
+        home:            /opt/exhibitor,
         latest: {
           command: "curl -s 'http://jcenter.bintray.com/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
           pattern: '^\d+\.\d+\.\d+$'
