Helios master HTTP endpoint configured and verified

--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -2,6 +2,7 @@
 # ----------------------------------------------
 # Common tasks between Helios master and agent
 # ----------------------------------------------
+- file: path=~/.helios state=directory
 
 - name: Setting up Helios variables
   set_fact: helios_version="{{ helios.version | calculate( helios.latest ) }}"
