--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -1,33 +1,26 @@
 ---
 - debug: var=helios_master
+- debug: var=helios_master_port
 - debug: var=zookeeper_port
-    
-- name: Installing ZooKeeper client
-  pip:  name=zk-shell
   
-- set_fact: zk_host="{{ helios_master }}:{{ zookeeper_port }}"
-- set_fact: zk_shell_command="zk-shell '{{ zk_host }}' --run-once 'ls /status/masters'" 
-  
-- name: Checking ZooKeeper service
-  wait_for: host={{ helios_master }} port={{ zookeeper_port }} timeout=3
+- name: Checking Helios master endpoints
+  wait_for: host={{ helios_master }} port={{ item }} timeout=3
+  with_items:
+    - "{{ helios_master_port }}"
+    - "{{ zookeeper_port }}"
 
-- name:     Running ZooKeeper client
-  command:  "{{ zk_shell_command }}"
-  register: zk_shell_out
-- debug:    msg="{{ zk_shell_command }} => '{{ zk_shell_out.stdout }}'"
-  
-- name:  Verifying ZooKeeper client was able to connect
-  assert:
-    that:
-      - not ( 'failed'        in zk_shell_out.stdout.lower())
-      - not ( 'time-out'      in zk_shell_out.stdout.lower())
-      - not ( 'not connected' in zk_shell_out.stdout.lower())
-      - "'{{ helios_master | bare }}' in zk_shell_out.stdout"
+- name: Checking Helios master HTTP endpoints
+  uri:  url=http://{{ helios_master }}:{{ item.port }} status_code={{ item.status }}
+  with_items:
+    - { port: "{{ helios_master_port }}", status: 404 }
 
-- name: Copying Helios agent config
+- name: Copying Helios agent configs
   template:
-    src:  helios-agent
-    dest: "{{ helios.agent.config }}"
+    src:  "{{ item.from }}"
+    dest: "{{ item.to   }}"
+  with_items:
+    - { from: 'helios-agent',  to: "{{ helios.agent.config }}" }
+    - { from: 'helios-config', to: "{{ helios.agent.helios_config }}" }
 
 - name: Downloading Helios SkyDNS plugin
   get_url:
