--- a/playbooks/roles/helios/tasks/master/main.yml
+++ b/playbooks/roles/helios/tasks/master/main.yml
@@ -1,4 +1,7 @@
 ---
+- debug: var=helios_master_port
+- debug: var=zookeeper_port
+
 - include: zookeeper.yml
 
 - include: exhibitor.yml
@@ -13,3 +16,9 @@
 
 - name: Restarting Helios master service
   service: name=helios-master state=restarted enabled=yes
+
+- name: Checking Helios master HTTP endpoint
+  wait_for: port={{ helios_master_port }} timeout=3
+
+- name: Checking Helios master HTTP endpoint
+  uri:  url=http://localhost:{{ helios_master_port }} status_code=404
