--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -12,6 +12,7 @@
   with_items:
     - "{{ helios_master_port }}"
     - "{{ zookeeper_port }}"
+    # - "{{ registry_port }}"
 
 - name: Checking Helios master HTTP endpoints
   uri:  url=http://{{ helios_master }}:{{ item.port }} status_code={{ item.status }}
