--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -22,7 +22,11 @@ helios: {
       config: /etc/zookeeper/conf/zoo.cfg
     },
     etcd: {
-      
+      version:  0.4.6,
+      dir_name: etcd-v<version>-linux-amd64,
+      url:      'https://github.com/coreos/etcd/releases/download/v<version>/<dirname>.tar.gz',
+      archive:  /opt/etcd.tar.gz,
+      home:     /opt/etcd
     },
     skydns: {
       
