--- a/playbooks/roles/helios/tasks/master/main.yml
+++ b/playbooks/roles/helios/tasks/master/main.yml
@@ -19,8 +19,8 @@
 - name: Restarting Helios master service
   service: name=helios-master state=restarted enabled=yes
 
-- name: Checking Helios master HTTP endpoint
+- name: Verifying Helios master endpoint
   wait_for: port={{ helios_master_port }} timeout=3
 
-- name: Checking Helios master HTTP endpoint
+- name: Verifying Helios master HTTP endpoint
   uri:  url=http://localhost:{{ helios_master_port }} status_code=404
