--- a/playbooks/roles/helios/tasks/master/zookeeper.yml
+++ b/playbooks/roles/helios/tasks/master/zookeeper.yml
@@ -12,5 +12,5 @@
 - name: Restarting ZooKeeper service
   service: name=zookeeper state=restarted enabled=yes
 
-- name: Checking ZooKeeper service
+- name: Verifying ZooKeeper endpoint
   wait_for: port={{ zookeeper_port }} timeout=3
