--- a/playbooks/roles/helios/tasks/master/etcd.yml
+++ b/playbooks/roles/helios/tasks/master/etcd.yml
@@ -1,18 +1,21 @@
 ---
-- set_fact: etcd_dir="{{ helios.master.etcd.dir_name.replace( '<version>', helios.master.etcd.version ) }}"
+- set_fact: 
+    etcd_dir: "{{ helios.master.etcd.dir_name | tokens( helios.master.etcd ) }}"
 - set_fact: 
     etcd_src: "{{ helios.master.etcd.home }}/{{ etcd_dir }}/etcd"
     etcd_bin: "{{ ubuntu.bin_dir }}/etcd"
 
 - name: Downloading etcd
   get_url:
-    url:  "{{ helios.master.etcd.url.replace( '<version>', helios.master.etcd.version ).replace( '<dirname>', etcd_dir ) }}"
-    dest: "{{ helios.master.etcd.archive }}"
+    url:  "{{ helios.master.etcd.url     | tokens( { 'dir_name': etcd_dir, 'version': helios.master.etcd.version }) }}"
+    dest: "{{ helios.master.etcd.archive | tokens( helios.master.etcd ) }}"
     
+- file: path="{{ helios.master.etcd.home }}" state=absent
 - file: path="{{ helios.master.etcd.home }}" state=directory
+
 - name: Unpacking etcd
   unarchive:
-    src:  "{{ helios.master.etcd.archive }}"
+    src:  "{{ helios.master.etcd.archive | tokens( helios.master.etcd ) }}"
     dest: "{{ helios.master.etcd.home }}"
     copy: no       
 
