--- a/playbooks/roles/helios/tasks/master/main.yml
+++ b/playbooks/roles/helios/tasks/master/main.yml
@@ -14,7 +14,7 @@
     dest: "{{ helios.master.config }}"
 
 - name: Installing Helios master
-  apt:  deb="{{ helios.packages }}/helios-master_{{ helios_version }}_all.deb"
+  apt:  deb="{{ helios.home }}/helios-master_{{ helios_version }}_all.deb"
 
 - name: Restarting Helios master service
   service: name=helios-master state=restarted enabled=yes
